--- a/.github/workflows/firstworkflow.yaml
+++ b/.github/workflows/firstworkflow.yaml
@@ -1,12 +1,12 @@
 name: My first Github Workflow
 on: [push]
 jobs:
-	Check Python version:
-		runs-on: windows-latest
-		steps:
-			-run: git --version
-	Pylint Test
-		runs-on: windows-latest
-		steps:
-			-run: pylint app.py
+    Check-Python-version:
+        runs-on: windows-latest
+        steps:
+            -run: git --version
+    Pylint-Test:
+        runs-on: windows-latest
+        steps:
+            -run: pylint app.py
 	
